# dune-MIOCP

./: CMakeLists.txt  README.md  config.h.cmake  dune-MIOCP.pc.in  dune.module
cmake/modules/: CMakeLists.txt  FindGUROBI.cmake
develop_bounds_Nt/Nt25/: cut_0.txt  cut_10.txt  cut_11.txt  cut_12.txt  cut_13.txt  cut_2.txt  cut_3.txt  cut_4.txt  cut_5.txt  cut_7.txt
develop_bounds_Nt/Nt50/: cut_0.txt  cut_1.txt  cut_12.txt  cut_17.txt  cut_18.txt  cut_20.txt  cut_21.txt  cut_23.txt  cut_26.txt  cut_27.txt  cut_3.txt  cut_30.txt  cut_32.txt  cut_35.txt  cut_38.txt  cut_39.txt  cut_41.txt  cut_6.txt  cut_8.txt  cut_9.txt
dune/: CMakeLists.txt
dune/MIOCP/: CMakeLists.txt  Dmax.hh  Parameter.hh  activeset.hh  adjointdriver.hh  adjointheatfem.hh  callback.hh  gurobi.hh  heatdriver.hh  hfunctions.hh  linsolver.hh  outerapprox.hh  probleminterface.hh  switchconstr.hh
nreopt/: cut_13.txt  cut_17.txt  cut_20.txt  cut_21.txt  cut_23.txt  cut_24.txt  cut_27.txt  cut_8.txt
results/gurobi/: NX10x10_step100_mod0.txt  NX10x10_step100_mod0_logfile.txt  NX10x10_step100_mod1.txt  NX10x10_step100_mod1_logfile.txt  NX10x10_step100_mod2.txt  NX10x10_step100_mod2_logfile.txt  NX10x10_step20_mod0.txt  NX10x10_step20_mod0_logfile.txt  NX10x10_step20_mod1.txt  NX10x10_step20_mod1_logfile.txt  NX10x10_step20_mod2.txt  NX10x10_step20_mod2_logfile.txt  NX10x10_step40_mod0.txt  NX10x10_step40_mod0_logfile.txt  (+76 more)
src/: CMakeLists.txt  Dmax.cc  callback.cc  gurobi-Dmax.cc  master-gurobi.cc  master-gurobi.ini  master-oa.cc  master-oa.ini  reobjective.cc  reobjective.ini  robj.pl
(+336 files in other folders)
